Add API to delete pending settings
